# internal/daemon/controller/database/task/task.go
@@ -46,6 +46,7 @@ const (
 	StatusComplete
 	StatusFailed
 	StatusSkipped
+	StatusTimeout
 )
 
 var (
